Update: Gerador abre em nova aba

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             </div>
             
             <div style="text-align: center; margin-top: 2rem;">
-                <a href="gerador.html" class="button button--primary" style="background: var(--color-coral);">
+                <a href="gerador.html" class="button button--primary" style="background: var(--color-coral);" target="_blank" rel="noopener noreferrer">
                     <i class="fas fa-rocket"></i> Conheça a Ferramenta
                 </a>
                 <p style="font-size: 0.9rem; opacity: 0.8; margin-top: 1rem;">
@@ -1379,7 +1379,7 @@
             </div>
             
             <div style="text-align: center; margin-top: 2rem;">
-                <a href="gerador.html" class="button button--primary" style="background: var(--color-coral);">
+                <a href="gerador.html" class="button button--primary" style="background: var(--color-coral);" target="_blank" rel="noopener noreferrer">
                     <i class="fas fa-rocket"></i> Experimente Agora
                 </a>
                 <p style="font-size: 0.9rem; opacity: 0.8; margin-top: 1rem;">
