feat: Atualiza gerador - R5, PIX/Cartão, formulário personalizado

--- a/gerador-fixed.html
+++ b/gerador-fixed.html
@@ -167,6 +167,23 @@
     </header>
 
     <div class="container">
+        
+        <!-- AVISO IMPORTANTE SOBRE IA -->
+        <div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 25px; border-radius: 15px; margin-bottom: 30px; text-align: center;">
+            <h3 style="margin: 0 0 15px 0; display: flex; align-items: center; justify-content: center; gap: 10px;">
+                <i class="fas fa-robot"></i> Documentos Gerados por Inteligência Artificial
+            </h3>
+            <p style="margin: 0 0 10px 0; line-height: 1.6;">
+                ⚠️ <strong>Importante:</strong> Os documentos são gerados automaticamente por IA e <strong>precisam de revisão jurídica</strong> antes do uso.
+            </p>
+            <p style="margin: 0; line-height: 1.6; opacity: 0.95;">
+                💼 <strong>Precisa de um documento sob medida?</strong> 
+                <a href="documento-personalizado.html" style="color: #FFD700; text-decoration: underline; font-weight: bold;">
+                    Solicite uma redação personalizada aqui
+                </a>
+            </p>
+        </div>
+        
         <div class="progress-bar">
             <div class="step-circle active" id="step1">1</div>
             <div class="step-circle" id="step2">2</div>
@@ -215,7 +232,7 @@
             <div style="background: #f9f9f9; padding: 20px; border-radius: 8px; text-align: center;">
                 <p>Valor total:</p>
                 <h2 class="payment-amount" style="color: var(--primary);">R$ 0,00</h2>
-                <p><i class="fas fa-qrcode"></i> Chave PIX: <strong>agnesbenites@gmail.com</strong></p>
+                <p><i class="fas fa-qrcode"></i> Chave PIX: <strong><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="39585e575c4a5b5c57504d5c4a795e54585055175a5654">[email&#160;protected]</a></strong></p>
             </div>
             <button class="btn-primary" style="width: 100%; margin-top: 20px;" onclick="processPayment()">
                 Confirmar Pagamento e Baixar PDF
